# Copyright (c) 2011 FFLAS-FFPACK
# written by BB <bboyer@imag.fr>
# adapted from LinBox configuration
#
# ========LICENCE========
# This file is part of the library FFLAS-FFPACK.
#
# FFLAS-FFPACK is free software: you can redistribute it and/or modify
# it under the terms of the  GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
# ========LICENCE========
#/


pkgincludesubdir=$(pkgincludedir)/field

pkgincludesub_HEADERS=          	\
	  modular-balanced.h        	\
	  modular-balanced-double.h 	\
	  modular-balanced-float.h  	\
	  modular-balanced-int32.h  	\
	  modular-balanced-int64.h  	\
	  modular-positive.h        	\
	  modular-float.h           	\
	  modular-double.h          	\
	  modular-int32.h           	\
	  modular-uint32.h           	\
	  modular-int64.h           	\
	  modular-uint64.h           	\
	  nonzero-randiter.h        	\
	  modular-randiter.h        	\
	  unparametric.h            	\
	  field-general.h		\
	  integer.h			\
	  modular-integer.h		\
	  rns-double.h			\
	  rns-integer.h			\
	  rns-integer-mod.h

EXTRA_DIST=field.doxy
